# gradio-mnist-sample

./: .gitignore  README.md
gradio/: pyproject.toml
predict/: app.py  gradio_app.py  predict.py  pyproject.toml
train/: model.onnx  pyproject.toml  train.py
